bonus/gitlab/confs/gitlab/gitlab_all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  namespace: gitlab
  creationTimestamp: null
  labels:
    io.kompose.service: gitlab
  name: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gitlab
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.service: gitlab
    spec:
      containers:
        - env:
            - name: GITLAB_OMNIBUS_CONFIG
              value: |
                external_url 'https://gitlab.example.com'
                # Add any other gitlab.rb configuration here, each on its own line
          image: gitlab/gitlab-ee:latest
          name: gitlab
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 22
          resources: {}
          volumeMounts:
            - mountPath: /etc/gitlab
              name: gitlab-claim0
            - mountPath: /var/log/gitlab
              name: gitlab-claim1
            - mountPath: /var/opt/gitlab
              name: gitlab-claim2
      restartPolicy: Always
      volumes:
        - name: gitlab-claim0
          persistentVolumeClaim:
            claimName: gitlab-claim0
        - name: gitlab-claim1
          persistentVolumeClaim:
            claimName: gitlab-claim1
        - name: gitlab-claim2
          persistentVolumeClaim:
            claimName: gitlab-claim2
status: {}

---

apiVersion: v1
kind: Service
metadata:
  namespace: gitlab
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: gitlab
  name: gitlab
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "443"
      port: 443
      targetPort: 443
    - name: "22"
      port: 22
      targetPort: 22
  selector:
    io.kompose.service: gitlab
status:
  loadBalancer: {}
